@@ -47,13 +47,13 @@
     "/refresh.png":{"icon":"refresh"},
     "html/images/cover.png":{"icon":"album"},
 
-    "/ClassicalRadio/html/icon.png":{"svg":"music-clef-treble"},
+    "/ClassicalRadio/html/icon.png":{"svg":"classical-radio"},
     "/DIfm/html/icon.png":{"svg":"piano"},
-    "/JazzRadio/html/icon.png":{"svg":"saxophone"},
+    "/JazzRadio/html/icon.png":{"svg":"jazz-radio"},
     "/Podcast/html/images/podcastindex.png":{"icon":"new_releases"},
     "/Podcast/html/images/icon.png":{"svg":"podcast", "myapps":{"icon":"rss_feed"}},
     "/RadioTunes/html/icon.png":{"svg":"radio"},
-    "/RockRadio/html/icon.png":{"svg":"guitar-electric"},
+    "/RockRadio/html/icon.png":{"svg":"rock-radio"},
     "/Sounds/html/images/icon.png":{"svg":"nature_sounds"},
     "/ZenRadio/html/icon.png":{"svg":"self-improvement"},
     "/Live365/html/images/live365_svg.png":{"svg":"live365"},
