@@ -9,6 +9,7 @@
    go into padded area.
 6. Adjust sub-toolbar text alignments.
 7. Allow dragging favourites folder even if 'sort favourites' is enabled.
+8. Add custom classical, jazz, and rock radio icons.
 
 5.4.1
 -----
